--- a/Main.Rmd
+++ b/Main.Rmd
@@ -5,7 +5,7 @@ output:
     toc: yes
 ---
 
-```{r source files}
+```{r source files, echo=FALSE}
 source('spatstat_vectra.R')
 
 ```
@@ -13,27 +13,18 @@ source('spatstat_vectra.R')
 ```{r RUN import files method Erik dependent on .Rdata, echo=FALSE, eval=TRUE}
 ######### RUN import files method Erik#########
 
-# getwd()
-# # path = "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables"
-# path = "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping"
-# setwd(path)
-
-# load merged_data.Rdata
-
 paths <- list_cell_seg_files(
   "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables"
 )
 paste("There are", length(paths), "different samples currently available.")
 
 data = purrr::map_df(paths, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
-# data_split_slideID = data %>%
-#   split(.$`Slide ID`)
-# data_split_SampleName = data %>%
-#   split(.$`Sample Name`)
-# hf = hyperframe(pathfile = paths, SlideID = data$`Slide ID`, SampleName = unique(data$`Sample Name`), dataSampleName = data_split_SampleName)
-# hf = hyperframe(pathfile = paths, dataSampleName = data_split_SampleName)
-
 paste("dimensions of the data is", dim(data)[1], "times", dim(data)[2]) # 1805834 197
+
+data_with_distance = data %>%
+  do(bind_cols(., find_nearest_distance(.)))
+paste("dimensions of the data is", dim(data_filtered_with_distance)[1], "times", dim(data_filtered_with_distance)[2])
+
 data_filtered = data %>% filter(Phenotype != "")
 paste("dimensions of the data is", dim(data_filtered)[1], "times", dim(data_filtered)[2]) # 1805653 197
 
@@ -78,6 +69,7 @@ missing_list = list()
 r_close_list = list()
 statistic_close_list = list()
 r_vec = c(10,20)
+# r_vec currently does not work well when given NULL see inside spatstat_vectra
 
 histo_boxplot_plotter = FALSE
 statistic_plotter = FALSE
@@ -88,23 +80,14 @@ print("real cases")
 for (sample_name in paths[1:1]){
   data = purrr::map_df(sample_name, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
   print(paste("path of data is ", sample_name))
-  # data_split_slideID = data %>%
-  #   split(.$`Slide ID`)
-  # data_split_SampleName = data %>%
-  #   split(.$`Sample Name`)
-  # hf = hyperframe(pathfile = paths, SlideID = data$`Slide ID`, SampleName = unique(data$`Sample Name`), dataSampleName = data_split_SampleName)
-  # hf = hyperframe(pathfile = paths, dataSampleName = data_split_SampleName)
   
-  print(paste("dimensions of the data is", dim(data)[1], "times", dim(data)[2])) # 1805834 197
-  data_filtered = data %>% filter(Phenotype != "")
-  print(paste("dimensions of the data is", dim(data_filtered)[1], "times", dim(data_filtered)[2])) # 1805653 197
-  
-  data_filtered_with_distance <- data_filtered %>%
+  data_with_distance = data %>%
     do(bind_cols(., find_nearest_distance(.)))
-  print(paste("dimensions of the data is", dim(data_filtered_with_distance)[1], "times", dim(data_filtered_with_distance)[2])) #1805653 217
+  paste("dimensions of the data with distances is", dim(data_filtered_with_distance)[1], "times", dim(data_filtered_with_distance)[2])
   
-  pairwise_distances = distance_matrix(data_filtered_with_distance)
-  output =  do_analyse(data_filtered_with_distance, pheno_vector_absolut, colors_absolut,NULL, plotter = c(TRUE,TRUE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name, r_vec = NULL)
+  
+  
+  output =  do_analyse(data_with_distance, pheno_vector_absolut, colors_absolut,NULL, plotter = c(FALSE,FALSE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name, r_vec = r_vec)
   break
   
   
