--- a/Main.Rmd
+++ b/Main.Rmd
@@ -68,7 +68,7 @@ all_types_options_list = list()
 missing_list = list()
 r_close_list = list()
 statistic_close_list = list()
-r_vec = c(10,20)
+r_vec = c(10)
 # r_vec currently does not work well when given NULL see inside spatstat_vectra
 
 histo_boxplot_plotter = FALSE
@@ -78,32 +78,39 @@ plotter = c(histo_boxplot_plotter, statistic_plotter)
 print("real cases")
 
 for (sample_name in paths[1:1]){
-  data = purrr::map_df(sample_name, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
+  
+  sample_name = "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/HO105-194_[16067,37856]_cell_seg_data.txt" # PD-L1 positive cluster + Tumor cluster
   print(paste("path of data is ", sample_name))
+  data = purrr::map_df(sample_name, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
+  
+  sample_name = str_replace(sample_name,"C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/","")
+  sample_name = str_replace(sample_name,"_cell_seg_data.txt", "")
+  print(sample_name)
+
   
   data_with_distance = data %>%
     do(bind_cols(., find_nearest_distance(.)))
-  paste("dimensions of the data with distances is", dim(data_filtered_with_distance)[1], "times", dim(data_filtered_with_distance)[2])
+  paste("dimensions of the data with distances is", dim(data_with_distance)[1], "times", dim(data_with_distance)[2])
   
   
   
-  output =  do_analyse(data_with_distance, pheno_vector_absolut, colors_absolut,NULL, plotter = c(FALSE,FALSE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name, r_vec = r_vec)
+  output =  do_analyse(data_with_distance, pheno_vector_absolut, colors_absolut,NULL, plotter = c(FALSE,TRUE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name, r_vec = r_vec)
   break
   
   
   
 
-  statistic_sample_name = output[1]
-  statistic_mean_sample_name = output[2]
-  all_types_options_sample_name = output[3]
-  r_close_sample_name = output[4]
-  statistic_close_sample_name = output[5]
-  not_in_sample_sample_name = output[6]
-  
-  # print("statistic_sample_name");print(statistic_sample_name)
-  print("all_types_options_sample_name"); print(all_types_options_sample_name)
-  print("r_close_sample_name"); print(r_close_sample_name)
-  print("statistic_close_sample_name"); print(statistic_close_sample_name)
+  # statistic_sample_name = output[1]
+  # statistic_mean_sample_name = output[2]
+  # all_types_options_sample_name = output[3]
+  # r_close_sample_name = output[4]
+  # statistic_close_sample_name = output[5]
+  # not_in_sample_sample_name = output[6]
+  # 
+  # # print("statistic_sample_name");print(statistic_sample_name)
+  # print("all_types_options_sample_name"); print(all_types_options_sample_name)
+  # print("r_close_sample_name"); print(r_close_sample_name)
+  # print("statistic_close_sample_name"); print(statistic_close_sample_name)
   
   # statistics_list[[sample_name]] = statistic_sample_name
   # statistic_mean_list[[sample_name]] = statistic_mean_sample_name
@@ -135,8 +142,10 @@ for (sample_name in paths[1:1]){
 sample_name = "HO105-194_[16067,37856].im3" # PD-L1 positive cluster + Tumor cluster
 data_sample_name = data_filtered %>% filter(`Sample Name` == sample_name)
 data_sample_name = data_filtered_with_distance %>% filter(`Sample Name` == sample_name)
-output =  do_analyse(data_sample_name, NULL, NULL,NULL,c(TRUE,TRUE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name)
+# output =  do_analyse(data_sample_name, NULL, NULL,NULL,c(TRUE,TRUE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name)
 
+output = do_analyse(data_with_distance, pheno_vector_absolut, colors_absolut,NULL, plotter = c(FALSE,TRUE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name, r_vec = r_vec)
+stop("helloe1")
 sample_name = "HO105-194_[15564,37856].im3" # PD-L1 positive cluster + Tumor cluster
 #output =  do_analyse(merged_filtered_with_distance, statistics, sample_name, missing_list, plotter)
 output =  do_analyse(data_sample_name, NULL, NULL,NULL,c(TRUE,TRUE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name)
