--- a/Main.Rmd
+++ b/Main.Rmd
@@ -10,7 +10,7 @@ source('spatstat_vectra.R')
 
 ```
 
-```{r RUN import files method Erik dependent on .Rdata, echo=FALSE, eval=TRUE}
+```{r RUN import files method Erik dependent on .Rdata, echo=FALSE, eval=FALSE}
 ######### RUN import files method Erik#########
 
 paths <- list_cell_seg_files(
@@ -68,7 +68,7 @@ all_types_options_list = list()
 missing_list = list()
 r_close_list = list()
 statistic_close_list = list()
-r_vec = c(10)
+r_vec = c(10,20)
 # r_vec currently does not work well when given NULL see inside spatstat_vectra
 
 histo_boxplot_plotter = FALSE
@@ -77,15 +77,15 @@ statistic_plotter = FALSE
 plotter = c(histo_boxplot_plotter, statistic_plotter)
 print("real cases")
 
-for (sample_name in paths[1:1]){
+for (samplename in paths[1:1]){
   
-  sample_name = "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/HO105-194_[16067,37856]_cell_seg_data.txt" # PD-L1 positive cluster + Tumor cluster
-  print(paste("path of data is ", sample_name))
-  data = purrr::map_df(sample_name, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
+  samplename = "C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/HO105-194_[16067,37856]_cell_seg_data.txt" # PD-L1 positive cluster + Tumor cluster
+  print(paste("path of data is ", samplename))
+  data = purrr::map_df(samplename, read_cell_seg_data, pixels_per_micron = getOption("phenoptr.pixels.per.micron"))
   
-  sample_name = str_replace(sample_name,"C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/","")
-  sample_name = str_replace(sample_name,"_cell_seg_data.txt", "")
-  print(sample_name)
+  samplename = str_replace(samplename,"C:/Users/erikb/Documents/Thesis - Local/Data Marit voor Erik Bosch/Erik Bosch/Data complete phenotyping/HO105_Exported data tables/","")
+  samplename = str_replace(samplename,"_cell_seg_data.txt", "")
+  print(samplename)
 
   
   data_with_distance = data %>%
@@ -94,33 +94,23 @@ for (sample_name in paths[1:1]){
   
   
   
-  output =  do_analyse(data_with_distance, pheno_vector_absolut, colors_absolut,NULL, plotter = c(FALSE,TRUE),XposCol = 'Cell X Position', YposCol = 'Cell Y Position',PhenoCol = 'Phenotype', sample_name, r_vec = r_vec)
-  break
+  output =  do_analyse(Intable = data_with_distance, PhenoOrder = pheno_vector_absolut, Cols = colors_absolut, phenotype = NULL, plotter = c(FALSE,FALSE), XposCol = 'Cell X Position', YposCol = 'Cell Y Position', PhenoCol = 'Phenotype', sample_name = samplename, r_vec = r_vec)
+  
+  
+  pairwise_distances = output[[1]]
+  counts_sample = output[[2]]
+  density_sample = output[[3]]
+  MED_min = output[[4]]
+  MED = output[[5]]
+  MAD_min = output[[6]]
+  MAD = output[[7]]
+  r_close_list = output[[8]]
+  statistic_close_list = output[[9]]
+  all_types_options_sample_name = output[[10]]
   
   
   
-
-  # statistic_sample_name = output[1]
-  # statistic_mean_sample_name = output[2]
-  # all_types_options_sample_name = output[3]
-  # r_close_sample_name = output[4]
-  # statistic_close_sample_name = output[5]
-  # not_in_sample_sample_name = output[6]
-  # 
-  # # print("statistic_sample_name");print(statistic_sample_name)
-  # print("all_types_options_sample_name"); print(all_types_options_sample_name)
-  # print("r_close_sample_name"); print(r_close_sample_name)
-  # print("statistic_close_sample_name"); print(statistic_close_sample_name)
-  
-  # statistics_list[[sample_name]] = statistic_sample_name
-  # statistic_mean_list[[sample_name]] = statistic_mean_sample_name
-  # all_types_options_list[[sample_name]] = all_types_options_sample_name # all_types_options_list$`HO105-003_[10769,37002].im3`[1][[1]][1]$G$$fns[[36]]
-  # r_close_list[[sample_name]] = r_close_sample_name
-  # statistic_close_list[[sample_name]] = statistic_close_sample_name
-  # missing_list[[sample_name]] = not_in_sample_sample_name
-  # 
-  # print(all_types_options_list)
-  # print(statistic_close_list)
+  # browser() # here for Erik to remember this method of debugging
 }
 
 
